--- a/equipo-12/styles/login.module.css
+++ b/equipo-12/styles/login.module.css
@@ -3,6 +3,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    height:80vh;
+    height:85vh;
     margin: 0; 
+    background: #272727;
+    color: #fff;
+    gap: 20px;
+}
+
+.inputForm{
+    background-color: #fff;
+    border: 1px solid #D2FFEC;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 100%;
+    margin-bottom:20px;
+}
+
+.pError{
+    color: #DA0000;
 }
