--- a/equipo-12/globals.css
+++ b/equipo-12/globals.css
@@ -1,6 +1,10 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Open Sans", "sans-serif";
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", "sans-serif";
+  box-sizing: border-box;
+}
+
+#__next {
+  height: 100%;
 }
