--- a/equipo-12/components/Hero/Versiones/heroDesktop.module.css
+++ b/equipo-12/components/Hero/Versiones/heroDesktop.module.css
@@ -1,16 +1,17 @@
 .grid {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
     width: 100%;
-    background-image: url('../../utils/images/heroImage.jpg');
+    height: 100%;
+    background-image: url('../../../utils/images/heroImage.jpg');
     background-size: cover
 }
 
 .yellowBox {
     width: 100%;
-    margin-top: -125px;
+    bottom: 0;
     height: 148px;
     background: #C1FD35;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -24,22 +25,25 @@
     gap: 12px;
     flex-direction: row;
     z-index: 100;
-    margin-top: 30px;
+    margin-bottom: -100px;
     width: 100%;
 }
 
 .textBox {
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
     padding-left: 50px;
-    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-top: 15px;
 }
 
 .firstTitleHero {
-    width: 50%;
+    width: 35%;
+    font-family: 'Open Sans';
+    font-style: normal;
     font-weight: 400;
     font-size: 48px;
     line-height: 50px;
@@ -48,8 +52,17 @@
 
 .secondTitleHero {
     width: 40%;
+    font-family: 'Open Sans';
+    font-style: normal;
     font-weight: 400;
     font-size: 34px;
     line-height: 50px;
     color: #C1FD35;
 }
+
+/*TABLET*/
+@media (min-width: 1024px) {}
+
+
+/*MOBILE*/
+@media (min-width: 768px) {}
