igualando estilos del login y el register

--- a/equipo-12/styles/login.module.css
+++ b/equipo-12/styles/login.module.css
@@ -4,10 +4,10 @@
     justify-content: center;
     align-items: center; 
     height:85vh;
-    margin: 0; 
     background: #272727;
     color: #fff;
     gap: 20px;
+    padding-top: 100px;
 }
 
 .inputForm{
