--- a/equipo-12/components/Hero/Versiones/heroDesktop.module.css
+++ b/equipo-12/components/Hero/Versiones/heroDesktop.module.css
@@ -25,7 +25,8 @@
     gap: 12px;
     flex-direction: row;
     z-index: 100;
-    margin-bottom: -100px;
+    margin-bottom: -150px;
+    padding-bottom: 30px;
     width: 100%;
 }
 
@@ -37,7 +38,7 @@
     flex-direction: column;
     padding-left: 50px;
     padding-bottom: 20px;
-    padding-top: 15px;
+    padding-top: 40px;
 }
 
 .firstTitleHero {
